syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = "pkg/hw_service";

package homework_service;

service HomeworkService { 
    rpc GetPost(PostRequestWithId) returns (PostResponseWithEntity) {
        option (google.api.http) = {
            post: "/getPost"
            body: "*"
        };
    }
    rpc AddPost(PostRequestWithEntity) returns (PostResponseWithEntity) {
        option (google.api.http) = {
            post: "/addPost"
            body: "*"
        };
    }
    rpc UpdatePost(PostRequestWithEntity) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/updatePost"
            body: "*"
        };
    }
    rpc RemovePost(PostRequestWithId) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/removePost"
            body: "*"
        };
    }

    rpc AddComment(CommentRequestWithEntity) returns (CommentResponseWithEntity) {
        option (google.api.http) = {
            post: "/addComment"
            body: "*"
        };
    }
    rpc RemoveComment(CommentRequestWithId) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/removeComment"
            body: "*"
        };
    }
}

// [Request messages] ---
message PostRequestWithEntity {
    Post entity = 1;
}

message PostRequestWithId {
    uint64 id = 1;
}

message CommentRequestWithEntity {
    uint64 post_id = 1;
    Comment entity = 2;
}

message CommentRequestWithId {
    uint64 id = 1;
}
// ---

// [Response messages] ---
message PostResponseWithEntity {
    Post entity = 1;
}

message CommentResponseWithEntity {
    Comment entity = 1;
}
// ---


// [Entities] ---
message Post {
    uint64 id = 1;
    string heading = 2;
    string text = 3;
    uint64 likes_count = 4;
    repeated Comment comments = 5;
}

message Comment {
    uint64 id = 1;
    string text = 3;
    uint64 likes_count = 4;
}
// ---